Add prepublish hook and add dev into npm scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "lint": "eslint src",
     "dist": "bili",
-    "test": "jest"
+	"dev": "jest --no-cache --watchAll",
+    "test": "jest --no-cache",
+    "prepublish": "npm run dist && npm t"
   },
   "bili": {
     "format": "all"
